@@ -52,7 +52,7 @@ public:
 
 class TitleScreen {
 public:
-	TitleScreen() : Timeout(0), Iterations(0), Labels(NULL) {}
+	TitleScreen() : StretchImage(true), Timeout(0), Iterations(0), Labels(NULL) {}
 	~TitleScreen() {
 		if (this->Labels) {
 			for (int i = 0; this->Labels[i]; ++i) {
@@ -64,6 +64,7 @@ public:
 
 	std::string File;
 	std::string Music;
+	bool StretchImage;
 	int Timeout;
 	int Iterations;
 	TitleScreenLabel **Labels;
